# ticketeer

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.deps  README.md  docker-compose.yaml  docker-entrypoint.sh  fly.toml
.github/workflows/: fly-deploy.yml  package.yaml
api/: .gitignore  CMakeLists.txt  api-doc.md
api-old/: domain-model_draft.md
api/db/: schema.sql
api/db/migrations/: 20260425223043_01_init.sql
api/fixtures/: 001-up_initial.sql  sample-data.sql
api/src/: ticketeer-api.cc
api/src/ticketeer/core/: conf.cpp  conf.hpp  logging.hpp
api/src/ticketeer/handling/auth/: routes.hpp
api/src/ticketeer/handling/dashboard/: routes.hpp
api/src/ticketeer/handling/role/requester/: routes.cpp  routes.hpp
api/src/ticketeer/handling/role/supervisor/: routes.cpp  routes.hpp
cmd/: ticketeer-create_user.cc  ticketeer-user_list.cc  ticketeer-user_password.cc
db/: schema.sql
db/fixtures/: init.sql  sample-data.sql
db/migrations/: 20260425223043_01_init.sql  20260624141624_init.sql  20260628235529_update_ticket_updated_at_on_activity_change.sql
src/: ticketeer.cc
src/ticketeer/core/: conf-test.cc  conf.cpp  conf.hpp  logging-test.cc  logging.cpp  logging.hpp  options-test.cc
src/ticketeer/handling/auth/: middlewares.cpp  middlewares.hpp  overlord.hpp  pbkdf2.cpp  routes.cpp  routes.hpp  utils-test.cc  utils.hpp
src/ticketeer/handling/auth/template/: app_signin.csp  signin.csp
src/ticketeer/handling/dashboard/: routes.cpp  routes.hpp
src/ticketeer/handling/role/: common.cpp  common.hpp
src/ticketeer/handling/role/requester/: middlewares.cpp  middlewares.hpp  routes.cpp  routes.hpp
src/ticketeer/handling/role/requester/template/: home.csp  index.csp  requester_home.csp  requester_index.csp  requester_ticket_activity_message.csp  requester_ticket_create.csp  requester_ticket_details.csp  requester_ticket_list.csp
src/ticketeer/handling/role/requester/template/ticket/: activity_message.csp  details.csp  list.csp
src/ticketeer/handling/role/supervisor/: middlewares.cpp  middlewares.hpp  routes.cpp  routes.hpp
src/ticketeer/handling/role/supervisor/routes/: common.hpp  config_settings_get.cpp  config_settings_post.cpp  config_ticket_priority_create_post.cpp  config_ticket_priority_delete_post.cpp  config_ticket_priority_list_get.cpp  config_ticket_priority_update_post.cpp  config_ticket_status_create_post.cpp  config_ticket_status_delete_post.cpp  config_ticket_status_list_get.cpp  config_ticket_status_update_post.cpp  home_get.cpp  ticket_activity_attachment_create_post.cpp  ticket_activity_attachment_download_get.cpp  ticket_activity_create_message_post.cpp  ticket_activity_list_get.cpp  ticket_assigned_to_post.cpp  ticket_create_get.cpp  ticket_create_post.cpp  ticket_details_get.cpp  ticket_due_date_post.cpp  ticket_list_get.cpp  ticket_priority_post.cpp  ticket_status_post.cpp
src/ticketeer/handling/role/supervisor/template/: supervisor_config_settings.csp  supervisor_config_ticket_priority.csp  supervisor_config_ticket_status.csp  supervisor_home.csp  supervisor_ticket_activity_attachment.csp  supervisor_ticket_activity_list.csp  supervisor_ticket_activity_message.csp  supervisor_ticket_assigned_to_select.csp  supervisor_ticket_create.csp  supervisor_ticket_department_select.csp  supervisor_ticket_details.csp  supervisor_ticket_due_date_input.csp  supervisor_ticket_list.csp  supervisor_ticket_priority_badge.csp  supervisor_ticket_request_type_select.csp  supervisor_ticket_status_badge.csp
webapp/: package.json  vite.config.ts
webapp/src/lib/: api.ts
webapp/src/pages/: DashboardPage.tsx
webapp/src/pages/role/requester/: TicketsPage.tsx
webapp/src/pages/role/supervisor/: TicketsPage.tsx
